--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ paginate: 12 # Number of articles shown on one single page
 # in terminal, run `rougify list` to get the up-to-date list of
 # supported language for highlighting
 highlighter: rouge
+mathjax: true
 
 # Sidebar settings
 sidebar: true
