--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ github_username: zhangyx1998
 # facebook_username: 
 linkedin_username: yuxuan-zhang-98a566157
 zhihu_username: yuxuan.zhang
-weibo_username: yuxuan-zhang
+weibo_username: 1005052956625727
 
 # Build settings
 plugins:
